<resources>
    <string name="app_name">Survivor Winners</string>


    <string name="s1">Borneo</string>
    <string name="s2">Australian Outback</string>
    <string name="s3">Africa</string>
    <string name="s4">Marquesas</string>
    <string name="s5">Thailand</string>
    <string name="s6">Amazon</string>
    <string name="s7">Pearl Islands</string>
    <string name="s8">All Stars</string>
    <string name="s9">Vanuatu</string>
    <string name="s10">Palau</string>
    <string name="s11">Guatemala</string>
    <string name="s12">Panama</string>
    <string name="s13">Cook Islands</string>
    <string name="s14">Fiji</string>
    <string name="s15">China</string>
    <string name="s16">Micronesia</string>
    <string name="s17">Gabon</string>
    <string name="s18">Tocantins</string>
    <string name="s19">Samoa</string>
    <string name="s20">Heroes vs Villains</string>
    <string name="s21">Nicaragua</string>
    <string name="s22">Redemption Island</string>
    <string name="s23">South Pacific</string>
    <string name="s24">One World</string>
    <string name="s25">Philippines</string>
    <string name="s26">Caramoan</string>
    <string name="s27">Blood vs Water</string>
    <string name="s28">Cagayan</string>
    <string name="s29">San Juan del Sur</string>
    <string name="s30">Worlds Apart</string>
    <string name="s31">Cambodia</string>
    <string name="s32">Kaoh Rong</string>
    <string name="s33">Millennials vs Gen X</string>
    <string name="s34">Game Changers</string>
    <string name="s35">Heroes vs Healers vs Hustlers</string>
    <string name="s36">Ghost Island</string>
    <string name="s37">David vs Goliath</string>
    <string name="s38">Edge of Extinction</string>
    <string name="s39">Island of the Idols</string>
    <string name="s40">Winners at War</string>
    <string name="action_settings">Settings</string>

    <string name="s1winner">Richard Hatch</string>
    <string name="s2winner">Tina Wesson</string>
    <string name="s3winner">Ethan Zohn</string>
    <string name="s4winner">Vecepia Towery</string>
    <string name="s5winner">Brian Heidik</string>
    <string name="s6winner">Jenna Morasca</string>
    <string name="s7winner">Sandra Diaz-Twine</string>
    <string name="s8winner">Amber Brkich</string>
    <string name="s9winner">Chris Daugherty</string>
    <string name="s10winner">Tom Westman</string>
    <string name="s11winner">Danni Boatwright</string>
    <string name="s12winner">Aras Baskauskas</string>
    <string name="s13winner">Yul Kwon</string>
    <string name="s14winner">Earl Cole</string>
    <string name="s15winner">Todd Herzog</string>
    <string name="s16winner">Parvati Shallow</string>
    <string name="s17winner">Bob Crowley</string>
    <string name="s18winner">JT Thomas</string>
    <string name="s19winner">Natalie White</string>
    <string name="s20winner">Sandra Diaz-Twine</string>
    <string name="s21winner">Fabio Birza</string>
    <string name="s22winner">Boston Rob</string>
    <string name="s23winner">Sophie Clarke</string>
    <string name="s24winner">Kim Spradlin</string>
    <string name="s25winner">Denise Stapley</string>
    <string name="s26winner">John Cochran</string>
    <string name="s27winner">Tyson Apostol</string>
    <string name="s28winner">Tony Vlachos</string>
    <string name="s29winner">Natalie Anderson</string>
    <string name="s30winner">Mike Holloway</string>
    <string name="s31winner">Jeremy Collins</string>
    <string name="s32winner">Michele Fitzgerald</string>
    <string name="s33winner">Adam Klein</string>
    <string name="s34winner">Sarah Lacina</string>
    <string name="s35winner">Ben Driebergen</string>
    <string name="s36winner">Wendell Holland</string>
    <string name="s37winner">Nick Wilson</string>
    <string name="s38winner">Chris Underwood</string>
    <string name="s39winner">Tommy Sheehan</string>
    <string name="s40winner">Tony Vlachos</string>

    <string name="votes_away">Votes away from a perfect game: </string>
    <string name="correct_votes">Percentage of time voted correctly: </string>
    <string name="times_played">Times played: </string>


    // Info from Survivor wikia
    <string name = "s1votes_away"> 9</string>
    <string name = "s2votes_away"> 3</string>
    <string name = "s3votes_away"> 2</string>
    <string name = "s4votes_away"> 5</string>
    <string name = "s5votes_away"> 3</string>
    <string name = "s6votes_away"> 4</string>
    <string name = "s7votes_away"> 1</string>
    <string name = "s8votes_away"> 9</string>
    <string name = "s9votes_away"> 5</string>
    <string name = "s10votes_away"> 1</string>
    <string name = "s11votes_away"> 2</string>
    <string name = "s12votes_away"> 11</string>
    <string name = "s13votes_away"> 9</string>
    <string name = "s14votes_away"> 1</string>
    <string name = "s15votes_away"> 8</string>
    <string name = "s16votes_away"> 7</string>
    <string name = "s17votes_away"> 5</string>
    <string name = "s18votes_away"> 0</string>
    <string name = "s19votes_away"> 10</string>
    <string name = "s20votes_away"> 6</string>
    <string name = "s21votes_away"> 6</string>
    <string name = "s22votes_away"> 8</string>
    <string name = "s23votes_away"> 8</string>
    <string name = "s24votes_away"> 5</string>
    <string name = "s25votes_away"> 8</string>
    <string name = "s26votes_away"> 0</string>
    <string name = "s27votes_away"> 3</string>
    <string name = "s28votes_away"> 6</string>
    <string name = "s29votes_away"> 3</string>
    <string name = "s30votes_away"> 6</string>
    <string name = "s31votes_away"> 3</string>
    <string name = "s32votes_away"> 4</string>
    <string name = "s33votes_away"> 6</string>
    <string name = "s34votes_away"> 6</string>
    <string name = "s35votes_away"> 14</string>
    <string name = "s36votes_away"> 10</string>
    <string name = "s37votes_away"> 3</string>
    <string name = "s38votes_away"> 13</string>
    <string name = "s39votes_away"> 4</string>
    <string name = "s40votes_away"> 4</string>


    // Info from EdgertonMerrill on r/survivor
    <string name = "s1correct_votes"> 90.9%</string>
    <string name = "s2correct_votes"> 100%</string>
    <string name = "s3correct_votes"> 100%</string>
    <string name = "s4correct_votes"> 75.0%</string>
    <string name = "s5correct_votes"> 100%</string>
    <string name = "s6correct_votes"> 80.0%</string>
    <string name = "s7correct_votes"> 83.3%</string>
    <string name = "s8correct_votes"> 100%</string>
    <string name = "s9correct_votes"> 81.8%</string>
    <string name = "s10correct_votes"> 83.3%</string>
    <string name = "s11correct_votes"> 81.8%</string>
    <string name = "s12correct_votes"> 77.7%</string>
    <string name = "s13correct_votes"> 100%</string>
    <string name = "s14correct_votes"> 100%</string>
    <string name = "s15correct_votes"> 100%</string>
    <string name = "s16correct_votes"> 100%</string>
    <string name = "s17correct_votes"> 55.6%</string>
    <string name = "s18correct_votes"> 90.0%</string>
    <string name = "s19correct_votes"> 100%</string>
    <string name = "s20correct_votes"> 75.0%</string>
    <string name = "s21correct_votes"> 70.0%</string>
    <string name = "s22correct_votes"> 100%</string>
    <string name = "s23correct_votes"> 92.3%</string>
    <string name = "s24correct_votes"> 100%</string>
    <string name = "s25correct_votes"> 92.9%</string>
    <string name = "s26correct_votes"> 91.7%</string>
    <string name = "s27correct_votes"> 81.8%</string>
    <string name = "s28correct_votes"> 100%</string>
    <string name = "s29correct_votes"> 88.9%</string>
    <string name = "s30correct_votes"> 81.8%</string>
    <string name = "s31correct_votes"> 81.8%</string>
    <string name = "s32correct_votes"> 66.7%</string>
    <string name = "s33correct_votes"> 75.0%</string>

    <string name = "s1times_played"> 2</string>
    <string name = "s2times_played"> 3</string>
    <string name = "s3times_played"> 3</string>
    <string name = "s4times_played"> 1</string>
    <string name = "s5times_played"> 1</string>
    <string name = "s6times_played"> 2</string>
    <string name = "s7times_played"> 4</string>
    <string name = "s8times_played"> 3</string>
    <string name = "s9times_played"> 1</string>
    <string name = "s10times_played"> 1</string>
    <string name = "s11times_played"> 2</string>
    <string name = "s12times_played"> 2</string>
    <string name = "s13times_played"> 2</string>
    <string name = "s14times_played"> 1</string>
    <string name = "s15times_played"> 1</string>
    <string name = "s16times_played"> 4</string>
    <string name = "s17times_played"> 1</string>
    <string name = "s18times_played"> 3</string>
    <string name = "s19times_played"> 1</string>
    <string name = "s20times_played"> 4</string>
    <string name = "s21times_played"> 1</string>
    <string name = "s22times_played"> 5</string>
    <string name = "s23times_played"> 2</string>
    <string name = "s24times_played"> 2</string>
    <string name = "s25times_played"> 2</string>
    <string name = "s26times_played"> 2</string>
    <string name = "s27times_played"> 4</string>
    <string name = "s28times_played"> 3</string>
    <string name = "s29times_played"> 2</string>
    <string name = "s30times_played"> 1</string>
    <string name = "s31times_played"> 3</string>
    <string name = "s32times_played"> 2</string>
    <string name = "s33times_played"> 2</string>
    <string name = "s34times_played"> 3</string>
    <string name = "s35times_played"> 2</string>
    <string name = "s36times_played"> 2</string>
    <string name = "s37times_played"> 2</string>
    <string name = "s38times_played"> 1</string>
    <string name = "s39times_played"> 1</string>
    <string name = "s40times_played"> 3</string>
</resources>
